sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:19: error: reassignment to val
  if (i=getTaille()-1||((getCouleur(i+1)==ROUGE)&&rbon(i-1))){
       ^DutchFlagAlgo:28: error: reassignment to val
  if (i=0||((getCouleur(i-1)==BLEU)&&bBon(i-1))){
       ^